--- a/一些记录.md
+++ b/一些记录.md
@@ -172,3 +172,21 @@ image:@"Image-Blank-Item"];
 //            print("\((file as AnyObject).description)")
 //        }
 ```
+
+###目录相关
+```
+//检索指定路径
+//第一个参数指定了搜索的路径名称,NSDocumentDirectory表示是在Documents中寻找.NSCacheDirectory的话就是在cache文件中寻找.第二个参数限定了文件的检索范围只在沙箱内部.其意义为用户电脑主目录.也可以修改为网络主机等.最后一个参数决定了是否展开波浪线符号.展开后才是完整路径,这个布尔值一直为YES.
+//该方法返回值为一个数组,在iphone中由于只有一个唯一路径(相对OC而言),所以直接取数组第一个元素即可.
++ (NSString *)documentsPath
+{
+    return [NSSearchPathForDirectoriesInDomains(NSDocumentDirectory,
+NSUserDomainMask, YES)
+objectAtIndex:0];
+}
+```
+###打开设置
+```
+            _ = UIApplication.shared.openURL(URL(string: UIApplicationOpenSettingsURLString)!)
+
+```
