--- a/一些记录.md
+++ b/一些记录.md
@@ -1,8 +1,5 @@
 # OC-Swift_summary
-###navigationController的popViewController需要一个返回项，否则会有警告，可以用以下方式去掉警告
-```
-_ = self.navigationController?.popViewController(animated: true)
-```
+
 ###修改关联仓库的邮箱
 ```
 git remote origin set-url [url]
@@ -189,4 +186,71 @@ objectAtIndex:0];
 ```
             _ = UIApplication.shared.openURL(URL(string: UIApplicationOpenSettingsURLString)!)
 
+```
+
+###SWIFT3.0正确获取文件大小的
+```
+ let attr = try fileManager.attributesOfItem(atPath: filePath)
+ let size = attr[FileAttributeKey.size] as! UInt64
+```
+###    web
+```
+ JSContext *context = [webView valueForKeyPath:@"documentView.webView.mainFrame.javaScriptContext"];
+    // 打印异常,由于JS的异常信息是不会在OC中被直接打印的,所以我们在这里添加打印异常信息,
+    context.exceptionHandler = ^(JSContext *context, JSValue *exceptionValue) {
+        context.exception = exceptionValue;
+        NSLog(@"%@", exceptionValue);
+    };
+    
+    __weak __typeof(self)weakSelf = self;
+    // 上传
+    context[@"uploadImageIOS"] = ^() {
+        NSArray *args = [JSContext currentArguments];
+        JSValue *jsVal = args.firstObject;
+        NSString *type = jsVal.toString;
+        self.type = type;
+        dispatch_async(dispatch_get_main_queue(), ^{
+               [self chioceImage];
+        });
+     
+        
+    };
+    //签名
+    context[@"singnatureIOS"] = ^() {
+        
+        dispatch_async(dispatch_get_main_queue(), ^{
+            PSAutographViewController *autographVC = [PSAutographViewController new];
+            autographVC.hidesBottomBarWhenPushed = YES;
+            autographVC.signatureFishBlock = ^(NSString * urlString) {
+                NSString *strUrl = urlString;
+                NSString* userInfoStr =
+                [NSString stringWithFormat: @"commitImage('%@', '4')",
+                 strUrl];
+                
+                [weakSelf.webView stringByEvaluatingJavaScriptFromString: userInfoStr];
+                
+                
+            };
+            [self.navigationController pushViewController:autographVC animated:YES];
+        });
+
+        
+        
+    };
+    //查看签名
+    context[@"singnaturedIOS"] = ^() {
+        NSArray *args = [JSContext currentArguments];
+        JSValue *jsVal = args.firstObject;
+        NSString *url = jsVal.toString;
+       // NSLog(@"签名回调%@",url);
+        
+        dispatch_async(dispatch_get_main_queue(), ^{
+            PSAutographViewController *autographVC = [PSAutographViewController new];
+            autographVC.hidesBottomBarWhenPushed = YES;
+            autographVC.pictureUrl = url;
+            [self.navigationController pushViewController:autographVC animated:YES];
+        });
+
+        
+    };
 ```
