--- a/一些记录.md
+++ b/一些记录.md
@@ -253,4 +253,14 @@ objectAtIndex:0];
 
         
     };
+        //清除UIWebView的缓存
+    NSURLCache * cache = [NSURLCache sharedURLCache];
+    [cache removeAllCachedResponses];
+    
+    
+        // 打印异常,由于JS的异常信息是不会在OC中被直接打印的,所以我们在这里添加打印异常信息,
+    context.exceptionHandler = ^(JSContext *context, JSValue *exceptionValue) {
+        context.exception = exceptionValue;
+        NSLog(@"%@", exceptionValue);
+    };
 ```
