add refresh sqlite method

--- a/一些记录.md
+++ b/一些记录.md
@@ -264,3 +264,9 @@ objectAtIndex:0];
         NSLog(@"%@", exceptionValue);
     };
 ```
+###本地数据库升级策略
+```
+* 记录当前版本
+* 对比现在版本
+* 使用switch记录每个版本更新时的操作，这样更新版本时只需更新最新方式的即可，（每次更新添加一次case）
+```
