--- a/一些记录.md
+++ b/一些记录.md
@@ -270,3 +270,17 @@ objectAtIndex:0];
 * 对比现在版本
 * 使用switch记录每个版本更新时的操作，这样更新版本时只需更新最新方式的即可，（每次更新添加一次case）
 ```
+
+```
+所有这里都是练打字的，前面三个是练习一般打字的，都推荐的：
+https://10fastfingers.com/typing-test/english
+http://play.typeracer.com/
+http://www.typingtest.com/
+https://typing.io/  （这个是练习代码打字的，很不错，可能要翻墙）
+https://swiftcode.herokuapp.com/lobby  （这个也是练习代码打字的，很不错）
+https://www.typing.com/
+https://www.typingclub.com/sportal/
+```
+```
+ifconfig//局域网查询ip
+```
