--- a/一些记录.md
+++ b/一些记录.md
@@ -284,3 +284,12 @@ https://www.typingclub.com/sportal/
 ```
 ifconfig//局域网查询ip
 ```
+
+###关于ijkplayer直播框架framework的打包
+* ijkplayer下载地址:https://github.com/Bilibili/ijkplayer
+* 解压后进入 cd 到jkplayer-master文件夹中
+* 终端执行命令./init-ios.sh
+* 执行cd ios, 也就是进入到 ios目录
+* 进入 ios 文件夹后, 在终端依次执行./compile-ffmpeg.sh clean和./compile-ffmpeg.sh all命令, 编译 ffmpeg
+* 进入IJKMediaPlayer项目中修改release生成framework。
+* 使用命令lipo -create 真机版本路径 模拟器版本路径 -output 合并后的文件路径
