--- a/一些记录.md
+++ b/一些记录.md
@@ -293,3 +293,22 @@ ifconfig//局域网查询ip
 * 进入 ios 文件夹后, 在终端依次执行./compile-ffmpeg.sh clean和./compile-ffmpeg.sh all命令, 编译 ffmpeg
 * 进入IJKMediaPlayer项目中修改release生成framework。
 * 使用命令lipo -create 真机版本路径 模拟器版本路径 -output 合并后的文件路径
+
+###干掉mainstoryboard后的处理
+```
+1.删除info.plist文件中 Main storyboard file base name项
+该项用于引导程序打开Main的 storyboard 文件
+
+2.在appdelegate中，
+
+application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions 函数创建window，即
+
+
+    self.window = [[UIWindow alloc] initWithFrame:[[UIScreen mainScreen] bounds]];
+
+3.在appdelegate中，
+application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions 函数中，显示window
+
+
+    [self.window makeKeyAndVisible]; //显示窗口
+```
