HTMLString 的自适应处理

--- a/一些记录.md
+++ b/一些记录.md
@@ -312,3 +312,18 @@ application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictio
 
     [self.window makeKeyAndVisible]; //显示窗口
 ```
+
+##获取htmlstring后web加载的自适应解决
+```
+                        contentString = "<!DOCTYPE html>\n" +
+                            "<html>\n" +
+                            "<head>\n" +
+                            "    <style>img{display: inline; height: auto; max-width: 100%%;}</style>\n" +
+                            "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, maximum-scale=1\">\n" +
+                            "</head>\n" +
+                            "<body>\n" +
+                            contentString + "\n" +
+                            "</body>\n" +
+                        "</html>";
+                        self?.webView.loadHTMLString(contentString, baseURL: nil)
+```
