change company's name in App Store

--- a/一些记录.md
+++ b/一些记录.md
@@ -448,3 +448,25 @@ XCTAssertNoThrowSpecificNamed(expression, specificException, exception_name, for
 }
 ```
 style = -webkit-touch-callout:none 关闭webview的长按响应
+
+#修改App Store公司名
+* 联系苹果支持
+* 获取邓白氏码：（联系上海客服02126107504）
+* 给邓白氏公司发邮件说明修改内容，并要求下单到中国邓白氏
+* 邮件内容如下
+
+```
+
+Hi Dun & Bradstreet,
+
+This is Hoggen Wang. I am applying the request for renaming our company name to "Sichuan Qianjiwang Technology Co. LTD" for AppStore. Our DUNS is 544395032. The telephone number is +86 028 85288375. The address is F/26, Block A,Times Digital Building, No.1, Renmin Road(S), Wuhou District, SiChuan, China.
+
+Please help to forward the order to Chinese Dun & Bradstreet. Thanks.
+
+Best Regards,
+Hoggen Wang
+Email:   253192563@qq.com
+Mobile: +86 18682565339
+
+```
+* 未处理完，待续
