--- a/一些记录2.md
+++ b/一些记录2.md
@@ -202,3 +202,12 @@ class PSHeadlinesView: UIView {
 }
 
 ```
+
+#终端直接打包APP（测试）
+
+```
+
+xcrun -sdk iphoneos packageApplication -v  /Users/ios-mac/Library/Developer/Xcode/DerivedData/QianJiWang-dczvfxabkezjiyfuekibakmisdme/Build/Products/Debug-iphoneos/QianJiWang.app -o ~/Desktop/QianJiWang.ipa
+
+```
+
