--- a/高德地图.md
+++ b/高德地图.md
@@ -1,4 +1,125 @@
-#Java 常用笔记
+#高德地图
 
-* 编译javac *****.java
-* 运行 java *****
+###集成时我们首先要申请本应用对应的key这个在[官方文档](http://lbs.amap.com/api/ios-sdk/guide/create-project/get-key#t1)里面介绍的很详细
+在使用高德地图前，我们首先要在code中注册key
+
+```
+AMapServices.shared().apiKey = "a75721f344a52d***************";
+
+```
+
+
+初始化
+
+```
+   //地图初始化
+     let mapView =  MAMapView(frame: UIScreen.main.bounds);
+    //搜索初始化
+     let search = AMapSearchAPI()
+```
+
+相关配置
+
+```
+        view.addSubview(mapView)
+        //显示地图范围（比例）
+        mapView.zoomLevel = 14;
+        //配置（可选）
+        let config = MAUserLocationRepresentation();
+        config.showsHeadingIndicator = true;
+        config.locationDotBgColor = UIColor.green;
+        config.image = UIImage(named: "test");
+        mapView.update(config);
+        // mapView.logoCenter = CGPoint(x: view.bounds.width + 155, y: 450);
+        //指南针及其位置
+        mapView.showsCompass = true;
+        mapView.compassOrigin = CGPoint(x: view.bounds.width - 45, y: 64);
+        //旋转手势关闭
+        mapView.isRotateEnabled = false;
+        //相关代理
+        mapView.delegate = self;
+        //确保定位和跟随设置不被覆盖
+        mapView.showsUserLocation = true;
+        mapView.userTrackingMode = .follow
+```
+
+截屏
+
+```
+//截屏
+        let image =  mapView.takeSnapshot(in: self.view.bounds);
+```
+
+地址正向解析和逆地址编码（具体结果需要代理实现）
+
+```
+        let userLocation = mapView.userLocation.coordinate;
+        NSLog("first latitude : %f , longitude : %f",userLocation.latitude,userLocation.longitude);
+        let regeo = AMapReGeocodeSearchRequest();
+        regeo.location = AMapGeoPoint.location(withLatitude: CGFloat(userLocation.latitude), longitude: CGFloat(userLocation.longitude));
+        regeo.requireExtension = true;
+        //逆地址编码
+        search?.delegate = self
+        search?.aMapReGoecodeSearch(regeo);
+        //正向地址解析
+        let request = AMapGeocodeSearchRequest();
+        request.address = "成都市天府广场";
+        search?.aMapGeocodeSearch(request);
+
+```
+
+地址正向解析和逆地址编码代理实现（正向地址解析完成时，在解析地址处添加大头针）
+
+```
+//MAKE: 逆地址编码
+extension MapViewController: AMapSearchDelegate{
+    func onReGeocodeSearchDone(_ request: AMapReGeocodeSearchRequest!, response: AMapReGeocodeSearchResponse!) {
+        guard response.regeocode != nil  else {
+            return
+        }
+        let returnValue = response.regeocode.addressComponent.building;
+        let city: String = response.regeocode.addressComponent.city;
+        NSLog("%@",city );
+        print("\(String(describing: returnValue))")
+    }
+    //MAKE: 地址正向解析
+    func onGeocodeSearchDone(_ request: AMapGeocodeSearchRequest!, response: AMapGeocodeSearchResponse!) {
+        guard response.geocodes.count != 0 else {
+            return;
+        }
+        for geocode in response.geocodes {
+            print("latitude: \(geocode.location.latitude) ,longitude: \(geocode.location.longitude)");
+            //大头针。正向地址解析完成时，在解析地址处添加大头针
+            //需要实现代理
+            let pointAnnotation = MAPointAnnotation();
+            pointAnnotation.coordinate = CLLocationCoordinate2D(latitude: CLLocationDegrees(geocode.location.latitude), longitude: CLLocationDegrees(geocode.location.longitude))
+            pointAnnotation.title = geocode.building
+            pointAnnotation.subtitle = geocode.formattedAddress
+            mapView.addAnnotation(pointAnnotation);
+        }
+        
+    }
+}
+```
+
+添加大头针需要实现的代理
+
+```
+    //大头针代理
+    func mapView(_ mapView: MAMapView!, viewFor annotation: MAAnnotation!) -> MAAnnotationView! {
+        if annotation.isKind(of: MAPointAnnotation.self) {
+            let pointReuseIndetifier = "pointReuseIndetifier";
+            var annottationView: MAPinAnnotationView? = mapView.dequeueReusableAnnotationView(withIdentifier: pointReuseIndetifier) as! MAPinAnnotationView?
+            if  annottationView == nil {
+                annottationView = MAPinAnnotationView(annotation: annotation, reuseIdentifier: pointReuseIndetifier);
+            }
+            annottationView?.canShowCallout = true;
+            annottationView?.animatesDrop = true;
+            annottationView?.isDraggable = true;
+            annottationView?.rightCalloutAccessoryView = UIButton(type: .detailDisclosure)
+            return annottationView
+        }
+        
+        return nil
+    }
+```
