--- a/高德地图.md
+++ b/高德地图.md
@@ -38,6 +38,9 @@ AMapServices.shared().apiKey = "a75721f344a52d***************";
         mapView.isRotateEnabled = false;
         //相关代理
         mapView.delegate = self;
+        //防止系统自动杀掉定位 -- 后台定位
+        mapView.pausesLocationUpdatesAutomatically = false;
+        mapView.allowsBackgroundLocationUpdates = true;
         //确保定位和跟随设置不被覆盖
         mapView.showsUserLocation = true;
         mapView.userTrackingMode = .follow
