--- a/一些记录2.md
+++ b/一些记录2.md
@@ -217,3 +217,29 @@ xcrun -sdk iphoneos packageApplication -v  /Users/ios-mac/Library/Developer/Xcod
 * 选中Xcode先把程序（command + R）运行起来
 * 再选中Xcode，按快捷键（command + control + i）运行起来,此时Leaks已经跑起来了
 * 由于Leaks是动态监测，所以我们需要手动操作APP,一边操作，一边观察Leaks的变化，当出现红色叉时，就监测到了内存泄露，点击右上角的第二个，进行暂停检测(也可继续检测，当多个时暂停，一次处理了多个)
+
+
+#调用其他app实践
+
+```
+  func callApp() {
+        let url = URL(string: "alipay://");
+        if UIApplication.shared.canOpenURL(url!) {
+            UIApplication.shared.openURL(url!);
+        }
+        
+    }
+```
+
+还需要配置白名单,点击info.plist->右键->Open As->Source Code->添加下面的代码
+
+```
+ <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>weixin</string>
+        <string>baidu</string>
+        <string>alipay</string>
+        <string>weico</string>
+        <string>mqq</string>
+    </array>
+```
