跳转导航appe设置

--- a/一些记录2.md
+++ b/一些记录2.md
@@ -243,3 +243,57 @@ xcrun -sdk iphoneos packageApplication -v  /Users/ios-mac/Library/Developer/Xcod
         <string>mqq</string>
     </array>
 ```
+#调用导航地图app规划路线图
+```
+    class func showAlertAction(dictionary: [String: AnyObject],controller: UIViewController) {
+        let name: String = dictionary["name"] as! String
+        let latitude: Double = dictionary["latitude"] as! Double
+        let longitude: Double = dictionary["longitude"] as! Double;
+        let actionSheet = UIAlertController.init(title: "导航到 " + name, message: nil, preferredStyle: .actionSheet)
+        
+        let baiduString = "baidumap://map/direction?origin={{我的位置}}&destination=latlng:%f,%f|name=%@&mode=driving&coord_type=gcj02";
+        var urlStringBaidu = String(format: baiduString,latitude,longitude,name)
+        urlStringBaidu = urlStringBaidu.addingPercentEncoding(withAllowedCharacters: .urlQueryAllowed)!;
+        let urlBaidu = URL(string: urlStringBaidu);
+        let styleBaidu: UIAlertActionStyle = UIApplication.shared.canOpenURL(urlBaidu!) ? .default : .destructive;
+        let actionBaidu = UIAlertAction.init(title: "使用百度App导航", style: styleBaidu) { (action) in
+            QJWUtil.openUrl(url: urlBaidu!)
+            actionSheet.removeFromParentViewController()
+        }
+        
+        let changedToMars: CLLocation = CLLocation.init(latitude:  latitude, longitude:  longitude)
+        changedToMars.locationMarsFromBearPaw();
+        let gaodeString = "iosamap://path?sourceApplication=千机网&sid=testwangliugen&slat=&slon=&sname=&did=BGVIS2&dlat=%f&dlon=%f&dname=%@&dev=0&t=0";
+        var urlStringGaode = String(format:gaodeString,changedToMars.coordinate.latitude,changedToMars.coordinate.longitude,name)
+        urlStringGaode = urlStringGaode.addingPercentEncoding(withAllowedCharacters: .urlQueryAllowed)!
+        let urlGaode = URL(string: urlStringGaode);
+        let styleGaode:UIAlertActionStyle = UIApplication.shared.canOpenURL(urlGaode!) ? .default : .destructive;
+        let actionGaode = UIAlertAction.init(title: "使用高德App导航", style: styleGaode) { (action) in
+            QJWUtil.openUrl(url: urlGaode!)
+            actionSheet.removeFromParentViewController()
+        }
+        
+        let actionSelf = UIAlertAction.init(title: "使用苹果地图导航", style: .default) { (action) in
+            let currentLocation = MKMapItem.forCurrentLocation();
+            let toLocation = MKMapItem(placemark: MKPlacemark(coordinate: changedToMars.coordinate, addressDictionary: nil));
+            toLocation.name = name;
+            MKMapItem.openMaps(with: [currentLocation,toLocation], launchOptions: [MKLaunchOptionsDirectionsModeKey: MKLaunchOptionsDirectionsModeDriving,MKLaunchOptionsShowsTrafficKey: true])
+            actionSheet.removeFromParentViewController()
+        }
+        let actionCancel = UIAlertAction.init(title: "取消", style: .cancel)
+        
+        actionSheet.addAction(actionBaidu)
+        actionSheet.addAction(actionGaode)
+        actionSheet.addAction(actionSelf)
+        actionSheet.addAction(actionCancel)
+        controller.present(actionSheet, animated: true, completion: nil)
+    }
+    
+    private static func openUrl(url:URL) {
+        if UIApplication.shared.canOpenURL(url) {
+            UIApplication.shared.openURL(url);
+        }else{
+            QJWHintView.showMessageOnThisPage("你没有安装该app")
+        }
+    }
+```
