--- a/一些记录2.md
+++ b/一些记录2.md
@@ -209,6 +209,38 @@ class PSHeadlinesView: UIView {
 
 xcrun -sdk iphoneos packageApplication -v  /Users/ios-mac/Library/Developer/Xcode/DerivedData/QianJiWang-dczvfxabkezjiyfuekibakmisdme/Build/Products/Debug-iphoneos/QianJiWang.app -o ~/Desktop/QianJiWang.ipa
 
+xcodebuild archive -workspace 项目名称.xcworkspace 
+                       -scheme 项目名称 
+                       -configuration 构建配置 
+                       -archivePath archive包存储路径 
+                       CODE_SIGN_IDENTITY=证书 
+                       PROVISIONING_PROFILE=描述文件UUID
+ 
+ xcodebuild archive -workspace QianJiWang.xcworkspace 
+                       -scheme QianJiWang
+                       -configuration Debug
+                       -archivePath ~/Desktop/QianJiWang
+                       CODE_SIGN_IDENTITY=证书 
+                       PROVISIONING_PROFILE=描述文件UUID
+                       
+通过xcodebuild -list，获取scheme和configration
+证书Identity获取：
+打开你的钥匙串访问->选中其中一个证书->右键->显示简介，把标题复制出来就可以了。
+
+生成ipa文件
+
+xcodebuild -exportArchive -archivePath archive文件的地址.xcarchive 
+                          -exportPath 导出的文件夹地址 
+                          -exportOptionsPlist exprotOptionsPlist.plist 
+                          CODE_SIGN_IDENTITY=证书 
+                          PROVISIONING_PROFILE=描述文件UUID
+   
+xcodebuild -exportArchive -archivePath ~/Desktop/QianJiWang.xcarchive 
+                          -exportPath ~/Desktop/
+                          -exportOptionsPlist exprotOptionsPlist.plist 
+                        
+
+-exportOptionsPlist ./com.options.plist 是新增参数，plist文件可以有ad-hoc或者appstore两种配置。这里列出
 ```
 
 #Instruments使用实践
