--- a/一些记录2.md
+++ b/一些记录2.md
@@ -329,3 +329,8 @@ xcodebuild -exportArchive -archivePath ~/Desktop/QianJiWang.xcarchive
         }
     }
 ```
+
+#检查8080端口
+```
+lsof -i:8080
+```
