Maven创建依然没有成功

--- a/一些记录2.md
+++ b/一些记录2.md
@@ -333,5 +333,6 @@ xcodebuild -exportArchive -archivePath ~/Desktop/QianJiWang.xcarchive
 #检查8080端口
 ```
 lsof -i:8080
+sudo kill  PID
 ```
 test again
