--- a/一些记录2.md
+++ b/一些记录2.md
@@ -335,4 +335,9 @@ xcodebuild -exportArchive -archivePath ~/Desktop/QianJiWang.xcarchive
 lsof -i:8080
 sudo kill  PID
 ```
-test again
+#打开显示允许任何来源
+    “通用”里有时没有“任何来源”这个选项：
+         显示"任何来源"选项在控制台中执行：
+    sudo spctl --master-disable
+         不显示"任何来源"选项（macOS 10.12默认为不显示）在控制台中执行：
+    sudo spctl --master-enable
