--- a/换机要点.md
+++ b/换机要点.md
@@ -1,4 +1,10 @@
 
+#参考要点
+
+```
+https://github.com/macdao/ocds-guide-to-setting-up-mac
+```
+
 
 #brew安装
 
@@ -24,6 +30,42 @@ git config user.email
 ```
 git config --global user.name "Your Name"  
  git config --global user.email you@example.com
+```
+
+#配置git ignore
+
+```
+https://www.jianshu.com/p/e72b71a09bf8
+```
+
+
+```
+# Xcode
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
+
+#CocoaPods
+Pods
+!Podfile
+!Podfile.lock
+
 ```
 
 
