除开vpn基本记录完毕

--- a/换机要点.md
+++ b/换机要点.md
@@ -11,6 +11,13 @@ https://github.com/macdao/ocds-guide-to-setting-up-mac
 ```
  https://www.jianshu.com/p/d229ac7fe77d
 ```
+
+#brew cask安装
+
+```
+brew tap caskroom/cask
+```
+
 #git仓库用户名密码及邮箱配置
 ###修改关联仓库的邮箱
 ```
@@ -80,5 +87,84 @@ https://www.kafan.cn/edu/84821466.html
 
 #开发需要的软件
 
+####百度网盘(App Store 安装)
+####微信 (App Store 安装)
+####Application Loader(App Store 安装)
+
+####Charles[自带u盘安装]
+####Firefox(App Store 安装)
+#### Java SDk
+```
+brew cask install sourcetree
+```
+
+####Google Chrome
+
+```
+brew cask install google-chrome
+```
+ * Chrome Developer Tools
+ * JetBrains IDE Support
+ * LiveReload
+ * Postman
+ * React Developer Tools
+
+####IconKit [自带u盘安装]
+####Intellij IDea
+
+```
+//免费开源
+brew cask install intellij-idea-ce
+```
+
+#### Iterm
+```
+brew cask install iterm2
+```
+#### iTools [自带u盘安装]
+#### Jason [自带u盘安装]
+#### Lantern [自带u盘安装]
+#### node
+```
+brew install node
+```
+
+#### Macdown
+
+```
+brew cask install macdown
+```
+
+#### SourceTree
+
+```
+brew cask install sourcetree
+```
+
+#### SQLite Free[自带u盘安装]
+#### Sublime Text
+```
+brew cask install sublime-text
+
+```
+#### webStorm【下载破解、在有意思想做里面】
+#### Xmind
 
 #VPN搭建
+###mac电脑配置VPN
+
+
+###Android手机配置VPN
+
+
+###苹果手机配置VPN
+
+
+#个人常用快捷键便更
+
+系统偏好设置 -》 键盘 》快捷键
+
+输入法改为 option + <
+聚焦    搜索 command + 空格 
+
+
