--- a/换机要点.md
+++ b/换机要点.md
@@ -18,6 +18,29 @@ https://github.com/macdao/ocds-guide-to-setting-up-mac
 brew tap caskroom/cask
 ```
 
+#cocoa安装
+###rubygem更新
+
+```
+//请尽可能用比较新的 RubyGems 版本
+gem update --system
+//查看
+gem -v
+
+
+```
+
+
+```
+
+sudo gem install cocoapods 
+pod setup 
+//如果没有报错，就说明一切安装就成功了！
+gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/  
+//查看
+gem sources -l   
+```
+
 #git仓库用户名密码及邮箱配置
 ###修改关联仓库的邮箱
 ```
