关于内存管理的一些想法和记录

--- a/总结学习要点记录一.md
+++ b/总结学习要点记录一.md
@@ -89,5 +89,68 @@
   	 如果没有使用[mutableArray copy]（深拷贝）;而直接使用self.array = mutableArray;因为实际上array是被赋值了mutable属性；
   	 移除时值会被消除；
   	  
+  	  #三、内存泄漏的一些想法
+  	  总的来说，我认为内存泄漏的原因是由于内存在ARC环境下没有被系统自动释放（如循环引用）
+  	  记录如何调试内存泄漏的[blog](http://blog.csdn.net/Kevintang158/article/details/79027274)
+  	  ####内存之定时器
+  	  我们都知道定时器使用完毕时需要将其停止并滞空，但**置空定时器**方法到底何时调用呢？在当前类的dealloc方法中吗？并不是，若将置空定时器方法调用在dealloc方法中会产生如下问题，**当前类销毁执行dealloc的前提是定时器需要停止并滞空**，**而定时器停止并滞空的时机在当前类调用dealloc方法时**，这样就造成了互相等待的场景，从而内存一直无法释放。因此需要注意**置空定时器**的调用时机从而避免内存无法释放，可以将**置空定时器**方法外漏，在外部调用即可。
+  	  
+  	  
+  	  ####内存之block
+  	   Block的内存泄漏主要是由于循环引用；防止内存泄漏就是要防止对象之间引用的闭环出现；
+  	   一般采用的方法是让其中一个对象持有另一个对象的弱引用，例如：
+  	   
+  	   ```
+  	   __weak typeof(self) weakself = self; 
+  	   ```
+  	   
+  	   ####内存泄漏之delegate
+  	   
+  	   ```
+  	   @property (nonatomic, weak) id<****delegate> delegate;
+  	   
+  	   ```
+  	   比较值得注意的是swift中的协议要继承与class的，这时候可以用weak来修饰
+  	   
+  	   ####特别之非OC对象
+  	   
+  	   CGImageRef类型变量非OC对象，其需要手动执行释放操作CGImageRelease(ref)，否则会造成大量的内存泄漏导致程序崩溃。其他的对于CoreFoundation框架下的某些对象或变量需要手动释放、C语言代码中的malloc等需要对应free等都需要注意。
+  	   
+  	   
+  	   ####地图之内存泄漏
+  	   
+  	   若项目中使用地图相关类，一定要检测内存情况，因为地图是比较耗费App内存的，因此在根据文档实现某地图相关功能的同时，我们需要注意内存的正确释放，大体需要注意的有需在使用完毕时将地图、代理等滞空为nil，注意地图中标注（大头针）的复用，并且在使用完毕时清空标注数组等。
+  	   
+  	   ####循环数量巨大时内存管理
+  	   
+  	   ```
+  	   for (int i = 0; i < 100000; i++) {
+
+        @autoreleasepool {
+
+            NSString *string = @"Abc";
+
+            string = [string lowercaseString];
+
+            string = [string stringByAppendingString:@"xyz"];
+
+            NSLog(@"%@", string);
+
+        }
+
+    }
+  	   ```
+  	   
+  	   在循环中创建自己的autoReleasePool，及时释放占用内存大的临时变量，减少内存占用峰值。
+  	  
+  	  
+  	  
+  	  
+  	  
+  	  
+  	  
+  	  
+  	  
+  	  
   	  
   	  
