--- a/图片引起的9.3以下版本崩溃问题.md
+++ b/图片引起的9.3以下版本崩溃问题.md
@@ -18,7 +18,8 @@ find . -name 'Assets.car'
 3. 使用 assetutil 命令导出图片的信息存储到Assets.json文件中 
 
 ```
-sudo xcrun --sdk iphoneos assetutil --info /path/to/a/Assets.car > /tmp/Assets.json 
+ sudo xcrun --sdk iphoneos assetutil --info ./Assets.car > /tmp/Assets.json    //./Assets.ca为上一步查找的结果  /tmp/Assets.json为导出的json文件路径
 
 ```
 4. 打开刚才生成的Assets.json文件，查找含有”DisplayGamut” : “P3”, “Encoding” : “ARGB-16″的内容。这个对应的Name就是出现问题的图片了。
+5. open /tmp/Assets.json 
