--- a/一些记录2.md
+++ b/一些记录2.md
@@ -341,3 +341,71 @@ sudo kill  PID
     sudo spctl --master-disable
          不显示"任何来源"选项（macOS 10.12默认为不显示）在控制台中执行：
     sudo spctl --master-enable
+    
+    
+ #跳转设置
+ 
+ 
+ ```
+ #define iOS10 ([[UIDevice currentDevice].systemVersion doubleValue] >= 10.0)
+ //宏定义，判断是否是 iOS10.0以上
+
+NSString * urlStr = @"App-Prefs:root=Bluetooth";
+if ([[UIApplication sharedApplication] canOpenURL:[NSURL URLWithString:urlStr]]) {
+if (iOS10) {
+     //iOS10.0以上  使用的操作
+     [[UIApplication sharedApplication] openURL:[NSURL URLWithString:urlStr] options:@{} completionHandler:nil];
+} else 
+{
+      //iOS10.0以下  使用的操作
+     [[UIApplication sharedApplication] openURL:[NSURL URLWithString:urlStr]];
+}
+}
+
+
+
+
+
+蜂窝网络：prefs:root=MOBILE_DATA_SETTINGS_ID
+VPN — prefs:root=General&path=Network/VPN
+Wi-Fi：prefs:root=WIFI
+定位服务：prefs:root=LOCATION_SERVICES
+个人热点：prefs:root=INTERNET_TETHERING
+关于本机：prefs:root=General&path=About
+辅助功能：prefs:root=General&path=ACCESSIBILITY
+飞行模式：prefs:root=AIRPLANE_MODE
+锁定：prefs:root=General&path=AUTOLOCK
+亮度：prefs:root=Brightness
+蓝牙：prefs:root=General&path=Bluetooth
+时间设置：prefs:root=General&path=DATE_AND_TIME
+FaceTime：prefs:root=FACETIME
+设置：prefs:root=General
+键盘设置：prefs:root=General&path=Keyboard
+iCloud：prefs:root=CASTLE
+iCloud备份：prefs:root=CASTLE&path=STORAGE_AND_BACKUP
+语言：prefs:root=General&path=INTERNATIONAL
+定位：prefs:root=LOCATION_SERVICES
+音乐：prefs:root=MUSIC
+Music Equalizer — prefs:root=MUSIC&path=EQ
+Music Volume Limit — prefs:root=MUSIC&path=VolumeLimit
+Network — prefs:root=General&path=Network
+Nike + iPod — prefs:root=NIKE_PLUS_IPOD
+Notes — prefs:root=NOTES
+Notification — prefs:root=NOTIFICATIONS_ID
+Phone — prefs:root=Phone
+Photos — prefs:root=Photos
+Profile — prefs:root=General&path=ManagedConfigurationList
+Reset — prefs:root=General&path=Reset
+Safari — prefs:root=Safari
+Siri — prefs:root=General&path=Assistant
+Sounds — prefs:root=Sounds
+Software Update — prefs:root=General&path=SOFTWARE_UPDATE_LINK
+Store — prefs:root=STORE
+Twitter — prefs:root=TWITTER
+Usage — prefs:root=General&path=USAGE
+Wallpaper — prefs:root=Wallpaper
+ 
+ ```
+
+
+
