--- a/内存与拷贝.md
+++ b/内存与拷贝.md
@@ -149,7 +149,10 @@
   	  
   	  
   	  
-  	  
+  ###iOS程序的内存布局
+
+
+![对象指针.png](/Users/wangliugen/Desktop/SelfProject/OC-Swift_summary/图片资源/内存布局.png)	  
   	  
   	  
   	  
